--- a/.github/workflows/02-evento-issue.yaml
+++ b/.github/workflows/02-evento-issue.yaml
@@ -2,7 +2,7 @@ name: 02 - Evento issue
 on: 
   push:
     paths-ignore:
-      - '*.md'
+      - 'README.md'
   issues:
     types: 
       - opened
